@@ -9,7 +9,8 @@ void* to int
 - Enable to put workpanel on top of screen using -g command line switch
 (if autohiding is enabled, the panel will go to the bottom anyways - 
 TODO)
-- Improved rendering of main menu button and run browser
+- Improved rendering and mouseover behavior of main menu button, run 
+browser, keyboard chooser
 - Fixed file stream closing in mainmenu.cpp (duh!), thanks to Triples
 - Closed few memleaks
 
